maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:17: error: identifier expected but 'var' found.
def tourne(var k : Int){
           ^RandomMouseMaze:31: error: ':' expected but '}' found.
}
^