maze.randommouse.RandomMouseMaze.scala.code
override def run() {
  while(!isOverBaggle()){
    var dir = random3()
    if(!isFacingWall()){
      brushDown()
      forward()
      brushUp()
    }
    
  }
  
  pickupBaggle()
}


def tourne(var k : Int){
  right()
  for(i <- 0 to k-1)
  	left();
}